# crates/server/src/lib.rs
@@ -11,6 +11,7 @@ pub mod gateway;
 pub mod http;
 pub mod instance;
 pub mod openapi;
+pub mod presence;
 pub mod profile;
 pub mod telemetry;
 
